// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logs :: generateStateLogs Sanitized SeedlessOnboardingController State generates logs with sanitized SeedlessOnboardingController sensitive data 1`] = `
{
  "appVersion": "1",
  "buildNumber": "123",
  "engine": {
    "backgroundState": {
      "AccountTrackerController": {
        "accountsByChainId": {},
      },
      "AccountTreeController": {
        "accountGroupsMetadata": {},
        "accountTree": {
          "selectedAccountGroup": "",
          "wallets": {},
        },
        "accountWalletsMetadata": {},
        "hasAccountTreeSyncingSyncedAtLeastOnce": false,
        "isAccountTreeSyncingInProgress": false,
      },
      "AccountsController": {
        "internalAccounts": {
          "accounts": {},
          "selectedAccount": "",
        },
      },
      "AddressBookController": {
        "addressBook": {},
      },
      "AnalyticsController": {
        "analyticsId": "59710bcf-06cc-4247-9386-12425e7fc905",
        "optedIn": false,
      },
      "ApprovalController": {
        "approvalFlows": [],
        "pendingApprovalCount": 0,
        "pendingApprovals": {},
      },
      "AuthenticationController": {
        "isSignedIn": false,
      },
      "BridgeController": {
        "assetExchangeRates": {},
        "minimumBalanceForRentExemptionInLamports": "0",
        "quoteFetchError": null,
        "quoteRequest": {
          "srcTokenAddress": "0x0000000000000000000000000000000000000000",
        },
        "quotes": [],
        "quotesInitialLoadTime": null,
        "quotesLastFetched": null,
        "quotesLoadingStatus": null,
        "quotesRefreshCount": 0,
      },
      "BridgeStatusController": {
        "txHistory": {},
      },
      "ConnectivityController": {
        "connectivityStatus": "online",
      },
      "CronjobController": {
        "events": {},
      },
      "CurrencyRateController": {
        "currencyRates": {
          "ETH": {
            "conversionDate": 0,
            "conversionRate": 0,
            "usdConversionRate": null,
          },
        },
        "currentCurrency": "usd",
      },
      "DelegationController": {
        "delegations": {},
      },
      "EarnController": {
        "lastUpdated": 0,
        "lending": {
          "isEligible": false,
          "markets": [
            {
              "address": "",
              "chainId": 0,
              "id": "",
              "name": "",
              "netSupplyRate": 0,
              "outputToken": {
                "address": "",
                "chainId": 0,
              },
              "protocol": "",
              "rewards": [
                {
                  "rate": 0,
                  "token": {
                    "address": "",
                    "chainId": 0,
                  },
                },
              ],
              "totalSupplyRate": 0,
              "tvlUnderlying": "0",
              "underlying": {
                "address": "",
                "chainId": 0,
              },
            },
          ],
          "positions": [
            {
              "assets": "0",
              "chainId": 0,
              "id": "",
              "marketAddress": "",
              "marketId": "",
              "protocol": "",
            },
          ],
        },
        "pooled_staking": {
          "isEligible": false,
        },
      },
      "GasFeeController": {
        "estimatedGasFeeTimeBounds": {},
        "gasEstimateType": "none",
        "gasFeeEstimates": {},
        "gasFeeEstimatesByChainId": {},
        "nonRPCGasFeeApisDisabled": false,
      },
      "GatorPermissionsController": {
        "gatorPermissionsMapSerialized": "{"native-token-stream":{},"native-token-periodic":{},"erc20-token-stream":{},"erc20-token-periodic":{},"other":{}}",
        "gatorPermissionsProviderSnapId": "npm:@metamask/gator-permissions-snap",
        "isFetchingGatorPermissions": false,
        "isGatorPermissionsEnabled": false,
      },
      "KeyringController": {
        "isUnlocked": true,
        "keyrings": [
          {
            "accounts": [
              "0x1",
            ],
            "metadata": {
              "id": "keyring1",
              "name": "",
            },
            "type": "HD Key Tree",
          },
          {
            "accounts": [
              "0x2",
            ],
            "metadata": {
              "id": "keyring2",
              "name": "",
            },
            "type": "Simple Key Pair",
          },
        ],
        "vaultExists": false,
      },
      "LoggingController": {
        "logs": {},
      },
      "MultichainAssetsController": {
        "accountsAssets": {},
        "allIgnoredAssets": {},
        "assetsMetadata": {},
      },
      "MultichainAssetsRatesController": {
        "conversionRates": {},
        "historicalPrices": {},
      },
      "MultichainBalancesController": {
        "balances": {},
      },
      "MultichainNetworkController": {
        "isEvmSelected": true,
        "multichainNetworkConfigurationsByChainId": {
          "bip122:000000000019d6689c085ae165831e93": {
            "chainId": "bip122:000000000019d6689c085ae165831e93",
            "isEvm": false,
            "name": "Bitcoin",
            "nativeCurrency": "bip122:000000000019d6689c085ae165831e93/slip44:0",
          },
          "bip122:000000000933ea01ad0ee984209779ba": {
            "chainId": "bip122:000000000933ea01ad0ee984209779ba",
            "isEvm": false,
            "name": "Bitcoin Testnet",
            "nativeCurrency": "bip122:000000000933ea01ad0ee984209779ba/slip44:0",
          },
          "bip122:00000000da84f2bafbbc53dee25a72ae": {
            "chainId": "bip122:00000000da84f2bafbbc53dee25a72ae",
            "isEvm": false,
            "name": "Bitcoin Testnet4",
            "nativeCurrency": "bip122:00000000da84f2bafbbc53dee25a72ae/slip44:0",
          },
          "bip122:00000008819873e925422c1ff0f99f7c": {
            "chainId": "bip122:00000008819873e925422c1ff0f99f7c",
            "isEvm": false,
            "name": "Bitcoin Mutinynet",
            "nativeCurrency": "bip122:00000008819873e925422c1ff0f99f7c/slip44:0",
          },
          "bip122:regtest": {
            "chainId": "bip122:regtest",
            "isEvm": false,
            "name": "Bitcoin Regtest",
            "nativeCurrency": "bip122:regtest/slip44:0",
          },
          "solana:4uhcVJyU9pJkvQyS88uRDiswHXSCkY3z": {
            "chainId": "solana:4uhcVJyU9pJkvQyS88uRDiswHXSCkY3z",
            "isEvm": false,
            "name": "Solana Testnet",
            "nativeCurrency": "solana:4uhcVJyU9pJkvQyS88uRDiswHXSCkY3z/slip44:501",
          },
          "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp": {
            "chainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
            "isEvm": false,
            "name": "Solana",
            "nativeCurrency": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/slip44:501",
          },
          "solana:EtWTRABZaYq6iMfeYKouRu166VU2xqa1": {
            "chainId": "solana:EtWTRABZaYq6iMfeYKouRu166VU2xqa1",
            "isEvm": false,
            "name": "Solana Devnet",
            "nativeCurrency": "solana:EtWTRABZaYq6iMfeYKouRu166VU2xqa1/slip44:501",
          },
          "tron:2494104990": {
            "chainId": "tron:2494104990",
            "isEvm": false,
            "name": "Tron Shasta",
            "nativeCurrency": "tron:2494104990/slip44:195",
          },
          "tron:3448148188": {
            "chainId": "tron:3448148188",
            "isEvm": false,
            "name": "Tron Nile",
            "nativeCurrency": "tron:3448148188/slip44:195",
          },
          "tron:728126428": {
            "chainId": "tron:728126428",
            "isEvm": false,
            "name": "Tron",
            "nativeCurrency": "tron:728126428/slip44:195",
          },
        },
        "networksWithTransactionActivity": {},
        "selectedMultichainNetworkChainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      },
      "MultichainTransactionsController": {
        "nonEvmTransactions": {},
      },
      "NetworkController": {
        "networkConfigurationsByChainId": {
          "0x1": {
            "blockExplorerUrls": [],
            "chainId": "0x1",
            "defaultRpcEndpointIndex": 0,
            "name": "Ethereum",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "mainnet",
                "type": "infura",
                "url": "https://mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0x18c7": {
            "blockExplorerUrls": [
              "https://megaeth-testnet-v2.blockscout.com",
            ],
            "chainId": "0x18c7",
            "defaultBlockExplorerUrlIndex": 0,
            "defaultRpcEndpointIndex": 0,
            "name": "MegaETH Testnet",
            "nativeCurrency": "MegaETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "megaeth-testnet-v2",
                "type": "custom",
                "url": "https://carrot.megaeth.com/rpc",
              },
            ],
          },
          "0x2105": {
            "blockExplorerUrls": [],
            "chainId": "0x2105",
            "defaultRpcEndpointIndex": 0,
            "name": "Base",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "base-mainnet",
                "type": "infura",
                "url": "https://base-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0x279f": {
            "blockExplorerUrls": [
              "https://testnet.monadexplorer.com",
            ],
            "chainId": "0x279f",
            "defaultBlockExplorerUrlIndex": 0,
            "defaultRpcEndpointIndex": 0,
            "name": "Monad Testnet",
            "nativeCurrency": "MON",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "monad-testnet",
                "type": "custom",
                "url": "https://testnet-rpc.monad.xyz",
              },
            ],
          },
          "0x38": {
            "blockExplorerUrls": [],
            "chainId": "0x38",
            "defaultRpcEndpointIndex": 0,
            "name": "BNB Chain",
            "nativeCurrency": "BNB",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "bsc-mainnet",
                "type": "infura",
                "url": "https://bsc-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0x89": {
            "blockExplorerUrls": [],
            "chainId": "0x89",
            "defaultRpcEndpointIndex": 0,
            "name": "Polygon",
            "nativeCurrency": "POL",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "polygon-mainnet",
                "type": "infura",
                "url": "https://polygon-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xa": {
            "blockExplorerUrls": [],
            "chainId": "0xa",
            "defaultRpcEndpointIndex": 0,
            "name": "OP",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "optimism-mainnet",
                "type": "infura",
                "url": "https://optimism-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xa4b1": {
            "blockExplorerUrls": [],
            "chainId": "0xa4b1",
            "defaultRpcEndpointIndex": 0,
            "name": "Arbitrum",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "arbitrum-mainnet",
                "type": "infura",
                "url": "https://arbitrum-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xaa36a7": {
            "blockExplorerUrls": [],
            "chainId": "0xaa36a7",
            "defaultRpcEndpointIndex": 0,
            "name": "Sepolia",
            "nativeCurrency": "SepoliaETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "sepolia",
                "type": "infura",
                "url": "https://sepolia.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xe705": {
            "blockExplorerUrls": [],
            "chainId": "0xe705",
            "defaultRpcEndpointIndex": 0,
            "name": "Linea Sepolia",
            "nativeCurrency": "LineaETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "linea-sepolia",
                "type": "infura",
                "url": "https://linea-sepolia.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xe708": {
            "blockExplorerUrls": [],
            "chainId": "0xe708",
            "defaultRpcEndpointIndex": 0,
            "name": "Linea",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "linea-mainnet",
                "type": "infura",
                "url": "https://linea-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
        },
        "networksMetadata": {
          "mainnet": {
            "EIPS": {},
            "status": "unknown",
          },
        },
        "selectedNetworkClientId": "mainnet",
      },
      "NetworkEnablementController": {
        "enabledNetworkMap": {
          "bip122": {
            "bip122:000000000019d6689c085ae165831e93": true,
            "bip122:000000000933ea01ad0ee984209779ba": false,
            "bip122:00000000da84f2bafbbc53dee25a72ae": false,
            "bip122:00000008819873e925422c1ff0f99f7c": false,
            "bip122:regtest": false,
          },
          "eip155": {
            "0x1": true,
            "0x18c7": false,
            "0x2105": true,
            "0x279f": false,
            "0x38": true,
            "0x531": true,
            "0x89": true,
            "0xa": true,
            "0xa4b1": true,
            "0xaa36a7": false,
            "0xe705": false,
            "0xe708": true,
          },
          "solana": {
            "solana:4uhcVJyU9pJkvQyS88uRDiswHXSCkY3z": false,
            "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp": true,
            "solana:EtWTRABZaYq6iMfeYKouRu166VU2xqa1": false,
          },
          "tron": {
            "tron:2494104990": false,
            "tron:3448148188": false,
            "tron:728126428": true,
          },
        },
      },
      "NotificationServicesController": {
        "isCheckingAccountsPresence": false,
        "isFeatureAnnouncementsEnabled": false,
        "isFetchingMetamaskNotifications": false,
        "isMetamaskNotificationsFeatureSeen": false,
        "isNotificationServicesEnabled": false,
        "isUpdatingMetamaskNotifications": false,
        "isUpdatingMetamaskNotificationsAccount": [],
        "metamaskNotificationsList": [],
        "metamaskNotificationsReadList": [],
        "subscriptionAccountsSeen": [],
      },
      "NotificationServicesPushController": {
        "fcmToken": "",
        "isPushEnabled": true,
        "isUpdatingFCMToken": false,
      },
      "PermissionController": {
        "subjects": {},
      },
      "PerpsController": {
        "accountState": null,
        "activeProvider": "hyperliquid",
        "depositInProgress": false,
        "depositRequests": [],
        "hasPlacedFirstOrder": {
          "mainnet": false,
          "testnet": false,
        },
        "hip3ConfigVersion": 0,
        "initializationAttempts": 0,
        "initializationError": null,
        "initializationState": "uninitialized",
        "isEligible": false,
        "isFirstTimeUser": {
          "mainnet": true,
          "testnet": true,
        },
        "isTestnet": false,
        "lastDepositResult": null,
        "lastDepositTransactionId": null,
        "lastError": null,
        "lastUpdateTimestamp": 0,
        "lastWithdrawResult": null,
        "marketFilterPreferences": "volume",
        "perpsBalances": {},
        "tradeConfigurations": {
          "mainnet": {},
          "testnet": {},
        },
        "watchlistMarkets": {
          "mainnet": [],
          "testnet": [],
        },
        "withdrawInProgress": false,
        "withdrawalProgress": {
          "activeWithdrawalId": null,
          "lastUpdated": 0,
          "progress": 0,
        },
        "withdrawalRequests": [],
      },
      "PreferencesController": {
        "dismissSmartAccountSuggestionEnabled": false,
        "displayNftMedia": true,
        "featureFlags": {},
        "identities": {},
        "ipfsGateway": "https://dweb.link/ipfs/",
        "isIpfsGatewayEnabled": true,
        "isMultiAccountBalancesEnabled": true,
        "lostIdentities": {},
        "privacyMode": false,
        "securityAlertsEnabled": true,
        "selectedAddress": "",
        "showIncomingTransactions": {
          "0x1": true,
          "0x13881": true,
          "0x38": true,
          "0x5": true,
          "0x504": true,
          "0x505": true,
          "0x507": true,
          "0x531": true,
          "0x61": true,
          "0x64": true,
          "0x89": true,
          "0x8f": true,
          "0xa": true,
          "0xa869": true,
          "0xa86a": true,
          "0xaa36a7": true,
          "0xaa37dc": true,
          "0xe704": true,
          "0xe705": true,
          "0xe708": true,
          "0xfa": true,
          "0xfa2": true,
        },
        "showMultiRpcModal": false,
        "showTestNetworks": false,
        "smartAccountOptIn": true,
        "smartAccountOptInForAccounts": [],
        "smartTransactionsOptInStatus": true,
        "tokenNetworkFilter": {},
        "tokenSortConfig": {
          "key": "tokenFiatAmount",
          "order": "dsc",
          "sortCallback": "stringNumeric",
        },
        "useNftDetection": true,
        "useSafeChainsListValidation": true,
        "useTokenDetection": true,
        "useTransactionSimulations": true,
      },
      "ProfileMetricsController": {
        "initialEnqueueCompleted": false,
        "syncQueue": {},
      },
      "RampsController": {
        "paymentMethods": [],
        "preferredProvider": null,
        "providers": [],
        "requests": {},
        "selectedPaymentMethod": null,
        "tokens": null,
        "userRegion": null,
      },
      "RemoteFeatureFlagController": {
        "cacheTimestamp": 0,
        "localOverrides": {},
        "rawRemoteFeatureFlags": {},
        "remoteFeatureFlags": {},
      },
      "RewardsController": {
        "accounts": {},
        "activeAccount": null,
        "activeBoosts": {},
        "pointsEvents": {},
        "seasonStatuses": {},
        "seasons": {},
        "subscriptionReferralDetails": {},
        "subscriptions": {},
        "unlockedRewards": {},
      },
      "SamplePetnamesController": {
        "namesByChainIdAndAddress": {},
      },
      "SeedlessOnboardingController": {
        "accessToken": true,
        "encryptedKeyringEncryptionKey": true,
        "encryptedSeedlessEncryptionKey": true,
        "isSeedlessOnboardingUserAuthenticated": true,
        "metadataAccessToken": true,
        "nodeAuthTokens": [
          {
            "nodeIndex": 1,
            "nodePubKey": "nodePubKey",
          },
          {
            "nodeIndex": 2,
            "nodePubKey": "nodePubKey",
          },
          {},
        ],
        "refreshToken": true,
        "revokeToken": true,
        "socialBackupsMetadata": [
          {
            "keyringId": "keyring1",
            "type": "mnemonic",
          },
          {},
        ],
        "userId": "userId",
        "vault": true,
        "vaultEncryptionKey": true,
        "vaultEncryptionSalt": true,
      },
      "SelectedNetworkController": {
        "activeDappNetwork": null,
        "domains": {},
      },
      "SignatureController": {
        "signatureRequests": {},
        "unapprovedPersonalMsgCount": 0,
        "unapprovedPersonalMsgs": {},
        "unapprovedTypedMessages": {},
        "unapprovedTypedMessagesCount": 0,
      },
      "SmartTransactionsController": {
        "smartTransactionsState": {
          "fees": {
            "approvalTxFees": null,
            "tradeTxFees": null,
          },
          "feesByChainId": {
            "0x1": {
              "approvalTxFees": null,
              "tradeTxFees": null,
            },
            "0xaa36a7": {
              "approvalTxFees": null,
              "tradeTxFees": null,
            },
          },
          "liveness": true,
          "livenessByChainId": {
            "0x1": true,
            "0xaa36a7": true,
          },
          "smartTransactions": {
            "0x1": [],
          },
          "userOptIn": null,
          "userOptInV2": null,
        },
      },
      "SnapController": {
        "isReady": false,
        "snapStates": {},
        "snaps": {},
        "unencryptedSnapStates": {},
      },
      "SnapInterfaceController": {
        "interfaces": {},
      },
      "SnapsRegistry": {
        "database": null,
        "databaseUnavailable": false,
        "lastUpdated": null,
        "signature": null,
      },
      "SubjectMetadataController": {
        "subjectMetadata": {},
      },
      "SwapsController": {
        "aggregatorMetadata": null,
        "aggregatorMetadataLastFetched": 0,
        "approvalTransaction": null,
        "chainCache": {
          "0x1": {
            "aggregatorMetadata": null,
            "aggregatorMetadataLastFetched": 0,
            "tokens": null,
            "tokensLastFetched": 0,
            "topAssets": null,
            "topAssetsLastFetched": 0,
          },
        },
        "error": {
          "description": null,
          "key": null,
        },
        "fetchParams": {
          "destinationToken": "",
          "slippage": 0,
          "sourceAmount": 0,
          "sourceToken": "",
          "walletAddress": "",
        },
        "fetchParamsMetaData": {
          "destinationTokenInfo": {
            "address": "",
            "decimals": 0,
            "symbol": "",
          },
          "networkClientId": "mainnet",
          "sourceTokenInfo": {
            "address": "",
            "decimals": 0,
            "symbol": "",
          },
        },
        "isInPolling": false,
        "pollingCyclesLeft": 3,
        "quoteRefreshSeconds": null,
        "quoteValues": {},
        "quotes": {},
        "quotesLastFetched": 0,
        "tokens": null,
        "tokensLastFetched": 0,
        "topAggId": null,
        "topAggSavings": null,
        "topAssets": null,
        "usedCustomGas": null,
        "usedGasEstimate": null,
      },
      "TokenBalancesController": {
        "tokenBalances": {},
      },
      "TokenListController": {
        "preventPollingOnNetworkRestart": false,
        "tokensChainsCache": {},
      },
      "TokenRatesController": {
        "marketData": {},
      },
      "TokenSearchDiscoveryController": {
        "lastSearchTimestamp": null,
        "recentSearches": [],
      },
      "TokenSearchDiscoveryDataController": {
        "swapsTokenAddressesByChainId": {},
        "tokenDisplayData": [],
      },
      "TransactionController": {
        "lastFetchedBlockNumbers": {},
        "methodData": {},
        "submitHistory": [],
        "transactionBatches": [],
        "transactions": [],
      },
      "TransactionPayController": {
        "transactionData": {},
      },
      "UserStorageController": {
        "isAccountSyncingEnabled": true,
        "isBackupAndSyncEnabled": true,
        "isBackupAndSyncUpdateLoading": false,
        "isContactSyncingEnabled": true,
        "isContactSyncingInProgress": false,
      },
    },
  },
  "loggedIn": true,
  "metaMetricsId": "6D796265-7374-4953-6D65-74616D61736B",
}
`;

exports[`logs :: generateStateLogs generates a valid json export 1`] = `
{
  "appVersion": "1",
  "buildNumber": "123",
  "engine": {
    "backgroundState": {
      "AccountTrackerController": {
        "accountsByChainId": {},
      },
      "AccountTreeController": {
        "accountGroupsMetadata": {},
        "accountTree": {
          "selectedAccountGroup": "",
          "wallets": {},
        },
        "accountWalletsMetadata": {},
        "hasAccountTreeSyncingSyncedAtLeastOnce": false,
        "isAccountTreeSyncingInProgress": false,
      },
      "AccountsController": {
        "internalAccounts": {
          "accounts": {},
          "selectedAccount": "",
        },
      },
      "AddressBookController": {
        "addressBook": {},
      },
      "AnalyticsController": {
        "analyticsId": "59710bcf-06cc-4247-9386-12425e7fc905",
        "optedIn": false,
      },
      "ApprovalController": {
        "approvalFlows": [],
        "pendingApprovalCount": 0,
        "pendingApprovals": {},
      },
      "AuthenticationController": {
        "isSignedIn": false,
      },
      "BridgeController": {
        "assetExchangeRates": {},
        "minimumBalanceForRentExemptionInLamports": "0",
        "quoteFetchError": null,
        "quoteRequest": {
          "srcTokenAddress": "0x0000000000000000000000000000000000000000",
        },
        "quotes": [],
        "quotesInitialLoadTime": null,
        "quotesLastFetched": null,
        "quotesLoadingStatus": null,
        "quotesRefreshCount": 0,
      },
      "BridgeStatusController": {
        "txHistory": {},
      },
      "ConnectivityController": {
        "connectivityStatus": "online",
      },
      "CronjobController": {
        "events": {},
      },
      "CurrencyRateController": {
        "currencyRates": {
          "ETH": {
            "conversionDate": 0,
            "conversionRate": 0,
            "usdConversionRate": null,
          },
        },
        "currentCurrency": "usd",
      },
      "DelegationController": {
        "delegations": {},
      },
      "EarnController": {
        "lastUpdated": 0,
        "lending": {
          "isEligible": false,
          "markets": [
            {
              "address": "",
              "chainId": 0,
              "id": "",
              "name": "",
              "netSupplyRate": 0,
              "outputToken": {
                "address": "",
                "chainId": 0,
              },
              "protocol": "",
              "rewards": [
                {
                  "rate": 0,
                  "token": {
                    "address": "",
                    "chainId": 0,
                  },
                },
              ],
              "totalSupplyRate": 0,
              "tvlUnderlying": "0",
              "underlying": {
                "address": "",
                "chainId": 0,
              },
            },
          ],
          "positions": [
            {
              "assets": "0",
              "chainId": 0,
              "id": "",
              "marketAddress": "",
              "marketId": "",
              "protocol": "",
            },
          ],
        },
        "pooled_staking": {
          "isEligible": false,
        },
      },
      "GasFeeController": {
        "estimatedGasFeeTimeBounds": {},
        "gasEstimateType": "none",
        "gasFeeEstimates": {},
        "gasFeeEstimatesByChainId": {},
        "nonRPCGasFeeApisDisabled": false,
      },
      "GatorPermissionsController": {
        "gatorPermissionsMapSerialized": "{"native-token-stream":{},"native-token-periodic":{},"erc20-token-stream":{},"erc20-token-periodic":{},"other":{}}",
        "gatorPermissionsProviderSnapId": "npm:@metamask/gator-permissions-snap",
        "isFetchingGatorPermissions": false,
        "isGatorPermissionsEnabled": false,
      },
      "KeyringController": {
        "isUnlocked": true,
        "keyrings": [
          {
            "accounts": [
              "0x1",
            ],
            "metadata": {
              "id": "keyring1",
              "name": "",
            },
            "type": "HD Key Tree",
          },
          {
            "accounts": [
              "0x2",
            ],
            "metadata": {
              "id": "keyring2",
              "name": "",
            },
            "type": "Simple Key Pair",
          },
        ],
        "vaultExists": false,
      },
      "LoggingController": {
        "logs": {},
      },
      "MultichainAssetsController": {
        "accountsAssets": {},
        "allIgnoredAssets": {},
        "assetsMetadata": {},
      },
      "MultichainAssetsRatesController": {
        "conversionRates": {},
        "historicalPrices": {},
      },
      "MultichainBalancesController": {
        "balances": {},
      },
      "MultichainNetworkController": {
        "isEvmSelected": true,
        "multichainNetworkConfigurationsByChainId": {
          "bip122:000000000019d6689c085ae165831e93": {
            "chainId": "bip122:000000000019d6689c085ae165831e93",
            "isEvm": false,
            "name": "Bitcoin",
            "nativeCurrency": "bip122:000000000019d6689c085ae165831e93/slip44:0",
          },
          "bip122:000000000933ea01ad0ee984209779ba": {
            "chainId": "bip122:000000000933ea01ad0ee984209779ba",
            "isEvm": false,
            "name": "Bitcoin Testnet",
            "nativeCurrency": "bip122:000000000933ea01ad0ee984209779ba/slip44:0",
          },
          "bip122:00000000da84f2bafbbc53dee25a72ae": {
            "chainId": "bip122:00000000da84f2bafbbc53dee25a72ae",
            "isEvm": false,
            "name": "Bitcoin Testnet4",
            "nativeCurrency": "bip122:00000000da84f2bafbbc53dee25a72ae/slip44:0",
          },
          "bip122:00000008819873e925422c1ff0f99f7c": {
            "chainId": "bip122:00000008819873e925422c1ff0f99f7c",
            "isEvm": false,
            "name": "Bitcoin Mutinynet",
            "nativeCurrency": "bip122:00000008819873e925422c1ff0f99f7c/slip44:0",
          },
          "bip122:regtest": {
            "chainId": "bip122:regtest",
            "isEvm": false,
            "name": "Bitcoin Regtest",
            "nativeCurrency": "bip122:regtest/slip44:0",
          },
          "solana:4uhcVJyU9pJkvQyS88uRDiswHXSCkY3z": {
            "chainId": "solana:4uhcVJyU9pJkvQyS88uRDiswHXSCkY3z",
            "isEvm": false,
            "name": "Solana Testnet",
            "nativeCurrency": "solana:4uhcVJyU9pJkvQyS88uRDiswHXSCkY3z/slip44:501",
          },
          "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp": {
            "chainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
            "isEvm": false,
            "name": "Solana",
            "nativeCurrency": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/slip44:501",
          },
          "solana:EtWTRABZaYq6iMfeYKouRu166VU2xqa1": {
            "chainId": "solana:EtWTRABZaYq6iMfeYKouRu166VU2xqa1",
            "isEvm": false,
            "name": "Solana Devnet",
            "nativeCurrency": "solana:EtWTRABZaYq6iMfeYKouRu166VU2xqa1/slip44:501",
          },
          "tron:2494104990": {
            "chainId": "tron:2494104990",
            "isEvm": false,
            "name": "Tron Shasta",
            "nativeCurrency": "tron:2494104990/slip44:195",
          },
          "tron:3448148188": {
            "chainId": "tron:3448148188",
            "isEvm": false,
            "name": "Tron Nile",
            "nativeCurrency": "tron:3448148188/slip44:195",
          },
          "tron:728126428": {
            "chainId": "tron:728126428",
            "isEvm": false,
            "name": "Tron",
            "nativeCurrency": "tron:728126428/slip44:195",
          },
        },
        "networksWithTransactionActivity": {},
        "selectedMultichainNetworkChainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      },
      "MultichainTransactionsController": {
        "nonEvmTransactions": {},
      },
      "NetworkController": {
        "networkConfigurationsByChainId": {
          "0x1": {
            "blockExplorerUrls": [],
            "chainId": "0x1",
            "defaultRpcEndpointIndex": 0,
            "name": "Ethereum",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "mainnet",
                "type": "infura",
                "url": "https://mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0x18c7": {
            "blockExplorerUrls": [
              "https://megaeth-testnet-v2.blockscout.com",
            ],
            "chainId": "0x18c7",
            "defaultBlockExplorerUrlIndex": 0,
            "defaultRpcEndpointIndex": 0,
            "name": "MegaETH Testnet",
            "nativeCurrency": "MegaETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "megaeth-testnet-v2",
                "type": "custom",
                "url": "https://carrot.megaeth.com/rpc",
              },
            ],
          },
          "0x2105": {
            "blockExplorerUrls": [],
            "chainId": "0x2105",
            "defaultRpcEndpointIndex": 0,
            "name": "Base",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "base-mainnet",
                "type": "infura",
                "url": "https://base-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0x279f": {
            "blockExplorerUrls": [
              "https://testnet.monadexplorer.com",
            ],
            "chainId": "0x279f",
            "defaultBlockExplorerUrlIndex": 0,
            "defaultRpcEndpointIndex": 0,
            "name": "Monad Testnet",
            "nativeCurrency": "MON",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "monad-testnet",
                "type": "custom",
                "url": "https://testnet-rpc.monad.xyz",
              },
            ],
          },
          "0x38": {
            "blockExplorerUrls": [],
            "chainId": "0x38",
            "defaultRpcEndpointIndex": 0,
            "name": "BNB Chain",
            "nativeCurrency": "BNB",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "bsc-mainnet",
                "type": "infura",
                "url": "https://bsc-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0x89": {
            "blockExplorerUrls": [],
            "chainId": "0x89",
            "defaultRpcEndpointIndex": 0,
            "name": "Polygon",
            "nativeCurrency": "POL",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "polygon-mainnet",
                "type": "infura",
                "url": "https://polygon-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xa": {
            "blockExplorerUrls": [],
            "chainId": "0xa",
            "defaultRpcEndpointIndex": 0,
            "name": "OP",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "optimism-mainnet",
                "type": "infura",
                "url": "https://optimism-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xa4b1": {
            "blockExplorerUrls": [],
            "chainId": "0xa4b1",
            "defaultRpcEndpointIndex": 0,
            "name": "Arbitrum",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "arbitrum-mainnet",
                "type": "infura",
                "url": "https://arbitrum-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xaa36a7": {
            "blockExplorerUrls": [],
            "chainId": "0xaa36a7",
            "defaultRpcEndpointIndex": 0,
            "name": "Sepolia",
            "nativeCurrency": "SepoliaETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "sepolia",
                "type": "infura",
                "url": "https://sepolia.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xe705": {
            "blockExplorerUrls": [],
            "chainId": "0xe705",
            "defaultRpcEndpointIndex": 0,
            "name": "Linea Sepolia",
            "nativeCurrency": "LineaETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "linea-sepolia",
                "type": "infura",
                "url": "https://linea-sepolia.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
          "0xe708": {
            "blockExplorerUrls": [],
            "chainId": "0xe708",
            "defaultRpcEndpointIndex": 0,
            "name": "Linea",
            "nativeCurrency": "ETH",
            "rpcEndpoints": [
              {
                "failoverUrls": [],
                "networkClientId": "linea-mainnet",
                "type": "infura",
                "url": "https://linea-mainnet.infura.io/v3/{infuraProjectId}",
              },
            ],
          },
        },
        "networksMetadata": {
          "mainnet": {
            "EIPS": {},
            "status": "unknown",
          },
        },
        "selectedNetworkClientId": "mainnet",
      },
      "NetworkEnablementController": {
        "enabledNetworkMap": {
          "bip122": {
            "bip122:000000000019d6689c085ae165831e93": true,
            "bip122:000000000933ea01ad0ee984209779ba": false,
            "bip122:00000000da84f2bafbbc53dee25a72ae": false,
            "bip122:00000008819873e925422c1ff0f99f7c": false,
            "bip122:regtest": false,
          },
          "eip155": {
            "0x1": true,
            "0x18c7": false,
            "0x2105": true,
            "0x279f": false,
            "0x38": true,
            "0x531": true,
            "0x89": true,
            "0xa": true,
            "0xa4b1": true,
            "0xaa36a7": false,
            "0xe705": false,
            "0xe708": true,
          },
          "solana": {
            "solana:4uhcVJyU9pJkvQyS88uRDiswHXSCkY3z": false,
            "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp": true,
            "solana:EtWTRABZaYq6iMfeYKouRu166VU2xqa1": false,
          },
          "tron": {
            "tron:2494104990": false,
            "tron:3448148188": false,
            "tron:728126428": true,
          },
        },
      },
      "NotificationServicesController": {
        "isCheckingAccountsPresence": false,
        "isFeatureAnnouncementsEnabled": false,
        "isFetchingMetamaskNotifications": false,
        "isMetamaskNotificationsFeatureSeen": false,
        "isNotificationServicesEnabled": false,
        "isUpdatingMetamaskNotifications": false,
        "isUpdatingMetamaskNotificationsAccount": [],
        "metamaskNotificationsList": [],
        "metamaskNotificationsReadList": [],
        "subscriptionAccountsSeen": [],
      },
      "NotificationServicesPushController": {
        "fcmToken": "",
        "isPushEnabled": true,
        "isUpdatingFCMToken": false,
      },
      "PermissionController": {
        "subjects": {},
      },
      "PerpsController": {
        "accountState": null,
        "activeProvider": "hyperliquid",
        "depositInProgress": false,
        "depositRequests": [],
        "hasPlacedFirstOrder": {
          "mainnet": false,
          "testnet": false,
        },
        "hip3ConfigVersion": 0,
        "initializationAttempts": 0,
        "initializationError": null,
        "initializationState": "uninitialized",
        "isEligible": false,
        "isFirstTimeUser": {
          "mainnet": true,
          "testnet": true,
        },
        "isTestnet": false,
        "lastDepositResult": null,
        "lastDepositTransactionId": null,
        "lastError": null,
        "lastUpdateTimestamp": 0,
        "lastWithdrawResult": null,
        "marketFilterPreferences": "volume",
        "perpsBalances": {},
        "tradeConfigurations": {
          "mainnet": {},
          "testnet": {},
        },
        "watchlistMarkets": {
          "mainnet": [],
          "testnet": [],
        },
        "withdrawInProgress": false,
        "withdrawalProgress": {
          "activeWithdrawalId": null,
          "lastUpdated": 0,
          "progress": 0,
        },
        "withdrawalRequests": [],
      },
      "PreferencesController": {
        "dismissSmartAccountSuggestionEnabled": false,
        "displayNftMedia": true,
        "featureFlags": {},
        "identities": {},
        "ipfsGateway": "https://dweb.link/ipfs/",
        "isIpfsGatewayEnabled": true,
        "isMultiAccountBalancesEnabled": true,
        "lostIdentities": {},
        "privacyMode": false,
        "securityAlertsEnabled": true,
        "selectedAddress": "",
        "showIncomingTransactions": {
          "0x1": true,
          "0x13881": true,
          "0x38": true,
          "0x5": true,
          "0x504": true,
          "0x505": true,
          "0x507": true,
          "0x531": true,
          "0x61": true,
          "0x64": true,
          "0x89": true,
          "0x8f": true,
          "0xa": true,
          "0xa869": true,
          "0xa86a": true,
          "0xaa36a7": true,
          "0xaa37dc": true,
          "0xe704": true,
          "0xe705": true,
          "0xe708": true,
          "0xfa": true,
          "0xfa2": true,
        },
        "showMultiRpcModal": false,
        "showTestNetworks": false,
        "smartAccountOptIn": true,
        "smartAccountOptInForAccounts": [],
        "smartTransactionsOptInStatus": true,
        "tokenNetworkFilter": {},
        "tokenSortConfig": {
          "key": "tokenFiatAmount",
          "order": "dsc",
          "sortCallback": "stringNumeric",
        },
        "useNftDetection": true,
        "useSafeChainsListValidation": true,
        "useTokenDetection": true,
        "useTransactionSimulations": true,
      },
      "ProfileMetricsController": {
        "initialEnqueueCompleted": false,
        "syncQueue": {},
      },
      "RampsController": {
        "paymentMethods": [],
        "preferredProvider": null,
        "providers": [],
        "requests": {},
        "selectedPaymentMethod": null,
        "tokens": null,
        "userRegion": null,
      },
      "RemoteFeatureFlagController": {
        "cacheTimestamp": 0,
        "localOverrides": {},
        "rawRemoteFeatureFlags": {},
        "remoteFeatureFlags": {},
      },
      "RewardsController": {
        "accounts": {},
        "activeAccount": null,
        "activeBoosts": {},
        "pointsEvents": {},
        "seasonStatuses": {},
        "seasons": {},
        "subscriptionReferralDetails": {},
        "subscriptions": {},
        "unlockedRewards": {},
      },
      "SamplePetnamesController": {
        "namesByChainIdAndAddress": {},
      },
      "SeedlessOnboardingController": {
        "accessToken": false,
        "encryptedKeyringEncryptionKey": false,
        "encryptedSeedlessEncryptionKey": false,
        "isSeedlessOnboardingUserAuthenticated": false,
        "metadataAccessToken": false,
        "nodeAuthTokens": [],
        "refreshToken": false,
        "revokeToken": false,
        "socialBackupsMetadata": [],
        "vault": false,
        "vaultEncryptionKey": false,
        "vaultEncryptionSalt": false,
      },
      "SelectedNetworkController": {
        "activeDappNetwork": null,
        "domains": {},
      },
      "SignatureController": {
        "signatureRequests": {},
        "unapprovedPersonalMsgCount": 0,
        "unapprovedPersonalMsgs": {},
        "unapprovedTypedMessages": {},
        "unapprovedTypedMessagesCount": 0,
      },
      "SmartTransactionsController": {
        "smartTransactionsState": {
          "fees": {
            "approvalTxFees": null,
            "tradeTxFees": null,
          },
          "feesByChainId": {
            "0x1": {
              "approvalTxFees": null,
              "tradeTxFees": null,
            },
            "0xaa36a7": {
              "approvalTxFees": null,
              "tradeTxFees": null,
            },
          },
          "liveness": true,
          "livenessByChainId": {
            "0x1": true,
            "0xaa36a7": true,
          },
          "smartTransactions": {
            "0x1": [],
          },
          "userOptIn": null,
          "userOptInV2": null,
        },
      },
      "SnapController": {
        "isReady": false,
        "snapStates": {},
        "snaps": {},
        "unencryptedSnapStates": {},
      },
      "SnapInterfaceController": {
        "interfaces": {},
      },
      "SnapsRegistry": {
        "database": null,
        "databaseUnavailable": false,
        "lastUpdated": null,
        "signature": null,
      },
      "SubjectMetadataController": {
        "subjectMetadata": {},
      },
      "SwapsController": {
        "aggregatorMetadata": null,
        "aggregatorMetadataLastFetched": 0,
        "approvalTransaction": null,
        "chainCache": {
          "0x1": {
            "aggregatorMetadata": null,
            "aggregatorMetadataLastFetched": 0,
            "tokens": null,
            "tokensLastFetched": 0,
            "topAssets": null,
            "topAssetsLastFetched": 0,
          },
        },
        "error": {
          "description": null,
          "key": null,
        },
        "fetchParams": {
          "destinationToken": "",
          "slippage": 0,
          "sourceAmount": 0,
          "sourceToken": "",
          "walletAddress": "",
        },
        "fetchParamsMetaData": {
          "destinationTokenInfo": {
            "address": "",
            "decimals": 0,
            "symbol": "",
          },
          "networkClientId": "mainnet",
          "sourceTokenInfo": {
            "address": "",
            "decimals": 0,
            "symbol": "",
          },
        },
        "isInPolling": false,
        "pollingCyclesLeft": 3,
        "quoteRefreshSeconds": null,
        "quoteValues": {},
        "quotes": {},
        "quotesLastFetched": 0,
        "tokens": null,
        "tokensLastFetched": 0,
        "topAggId": null,
        "topAggSavings": null,
        "topAssets": null,
        "usedCustomGas": null,
        "usedGasEstimate": null,
      },
      "TokenBalancesController": {
        "tokenBalances": {},
      },
      "TokenListController": {
        "preventPollingOnNetworkRestart": false,
        "tokensChainsCache": {},
      },
      "TokenRatesController": {
        "marketData": {},
      },
      "TokenSearchDiscoveryController": {
        "lastSearchTimestamp": null,
        "recentSearches": [],
      },
      "TokenSearchDiscoveryDataController": {
        "swapsTokenAddressesByChainId": {},
        "tokenDisplayData": [],
      },
      "TransactionController": {
        "lastFetchedBlockNumbers": {},
        "methodData": {},
        "submitHistory": [],
        "transactionBatches": [],
        "transactions": [],
      },
      "TransactionPayController": {
        "transactionData": {},
      },
      "UserStorageController": {
        "isAccountSyncingEnabled": true,
        "isBackupAndSyncEnabled": true,
        "isBackupAndSyncUpdateLoading": false,
        "isContactSyncingEnabled": true,
        "isContactSyncingInProgress": false,
      },
    },
  },
  "loggedIn": true,
  "metaMetricsId": "6D796265-7374-4953-6D65-74616D61736B",
}
`;
